--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,7 +48,7 @@ h3 {
   align-items: center;
   padding: 20px 20px;
   border-bottom: 1px solid #e6e6e6;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .header ul {
